# medInria-public

app/medInria/: medSegmentationWorkspace.cpp  medSegmentationWorkspace.h
app/medInria/resources/: medInria.qrc
app/medPluginGenerator/template/diffusion/: type.cpp  type.h  typeScalarMapsToolBox.cpp  typeScalarMapsToolBox.h  typeToolBox.cpp  typeToolBox.h
app/medPluginGenerator/template/registration/: cmake
src/: CMakeLists.txt
src-plugins/itkDataImage/navigators/: medVtkViewItkDataImageNavigator.cpp
src-plugins/medSegmentation/: medAlgorithmInitializer.cpp  medAlgorithmPaintToolbox.h  medClickAndMoveEventFilter.cpp  medManualSegProcess.cpp  medManualSegProcess.h
src-plugins/medVtkView/: CMakeLists.txt  medVtkViewNavigator.cpp  medVtkViewNavigator.h
src-plugins/v3dView/: v3dView.cpp
src/cmake/: medInriaConfig.cmake.in
src/layers/: CMakeLists.txt
src/layers/legacy/medVTKSimpleViewer/: CMakeLists.txt  medVTKSimpleViewerExport.h
src/layers/legacy/medVTKSimpleViewer/vtkDataManagement/: vtkDataManager.cxx  vtkDataManager.h  vtkMetaDataSet.h  vtkMetaDataSetSequence.cxx  vtkMetaDataSetSequence.h  vtkMetaImageData.cxx  vtkMetaImageData.h  vtkMetaSurfaceMesh.h  vtkMetaVolumeMesh.cxx  vtkMetaVolumeMesh.h
src/layers/legacy/medVTKSimpleViewer/vtkImageView/: medVTKSimpleViewBackend.cpp  medVTKSimpleViewBackend.h  vtkAxes2DWidget.h  vtkDataSet2DWidget.cxx  vtkDataSet2DWidget.h  vtkImageView.cxx  vtkImageView.h  vtkImageView2D.cxx  vtkImageView2D.h  vtkImageView2DCommand.h  vtkImageView3D.cxx  vtkImageView3D.h  vtkImageView3DCroppingBoxCallback.h  vtkImageViewCollection.cxx  vtkImageViewCollection.h  vtkImageViewCornerAnnotation.cxx  vtkImageViewCornerAnnotation.h  vtkInriaInteractorStyleRubberBandZoom.h  vtkInteractorStyleImageView2D.cxx  vtkInteractorStyleImageView2D.h  vtkOrientationAnnotation.h  vtkOrientedBoxWidget.cxx  vtkOrientedBoxWidget.h
src/layers/legacy/medVTKSimpleViewer/vtkVisuManagement/: vtkLookupTableManager.cxx  vtkLookupTableManager.h  vtkTransferFunctionPresets.h
src/layers/legacy/medVTKSimpleViewer/vtkWidgetsAddOn/: vtkInteractorStyleTrackballCamera2.h  vtkRulerWidget.cxx  vtkRulerWidget.h
src/medCore/gui/commonWidgets/: medDropSite.cpp
src/medCore/gui/toolboxes/: medSegmentationSelectorToolBox.cpp  medSegmentationSelectorToolBox.h
src/medCore/gui/viewContainers/: medViewContainer.cpp
src/medCore/process/: medAbstractProcess.cpp  medAbstractProcess.h  medAbstractSegmentationProcess.cpp  medAbstractSegmentationProcess.h
src/plugins/: CMakeLists.txt
src/plugins/legacy/itkDataImage/: CMakeLists.txt  itkDataImagePlugin.cpp
src/plugins/legacy/medVTKSimpleView/: CMakeLists.txt  medVTKSimpleView.cpp  medVTKSimpleView.h  medVTKSimpleViewNavigator.cpp  medVTKSimpleViewNavigator.h  medVTKSimpleViewObserver.cpp  medVTKSimpleViewObserver.h  medVTKSimpleViewPlugin.cpp  medVTKSimpleViewPlugin.h  medVTKSimpleViewPlugin.json  medVTKSimpleViewPluginExport.h  medVTKSimpleViewQGraphicsView.cpp  medVTKSimpleViewQGraphicsView.h
superbuild/configuration_steps/: EP_GeneratePatchCommand.cmake
superbuild/patches/: ITK_Mac_Rpath.patch
superbuild/projects_modules/: ITK.cmake  medInria.cmake
(+5 files in other folders)
